Fixed header alignment issue

--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ a:hover {
 header {
   display: -webkit-flex;
   display: -ms-flexbox;
-  display: flex;
+  display: flex !important;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
